--- a/mkcss.css
+++ b/mkcss.css
@@ -3,12 +3,16 @@
 }
 h1{
 
-    font-size: 40px;
+    font-size: 45px;
     font-weight: 600;
 }
 h2{
-    font-size: 30px;
+    font-size: 35px;
     font-weight: 500;
+}
+h3{
+    font-size: 30px;
+    font-weight: 400;
 }
 b,strong{
     color: rgb(250, 102, 76);
